# riskconnect

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: AGENTS.md  SKILLS.md  settings.json
.claude/agents/: aws-infra-lead.md  backend-platform-lead.md  data-enrichment-lead.md  devops-release-lead.md  frontend-ui-lead.md  genai-workflow-lead.md  (+1 more)
backend/: Dockerfile  README.md  pyproject.toml
backend/scripts/: prepare_poc_data.py
backend/src/risklens_api/: __init__.py  main.py
backend/src/risklens_api/api/: deps.py  submissions.py
backend/src/risklens_api/core/: config.py  constants.py  errors.py  ids.py  logging.py
backend/src/risklens_api/schemas/: processing.py  submissions.py
backend/src/risklens_api/services/: aws_runtime.py  enrichment_service.py  fakes.py  hazard_fixtures.py  submission_service.py
backend/src/risklens_api/worker/: __init__.py  processor.py  protocols.py
backend/tests/: conftest.py  test_aws_runtime.py  test_enrichment_service.py  test_health.py  test_schemas.py  test_submissions_api.py  test_worker.py  test_worker_handler.py
docs/: README.md  api-contract.md  architecture.md  aws-cli-vscode-setup.md  aws-free-tier-low-budget-notes.md  aws-infrastructure.md  claude-code-implementation-prompts.md  cost-plan.md  data-sources.md  delivery-tasks.md  devops.md  genai-design.md  github-cicd-setup.md  poc-e2e-implementation-prompts.md  security-governance.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
infra/: .gitignore  README.md
(+92 files in other folders)
