[project]
name = "risklens-backend"
version = "0.1.0"
description = "Python backend scaffold for the RiskLens submission triage MVP"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
